--- a/FaceTek/My Team/Googlemapformtblcell.xib
+++ b/FaceTek/My Team/Googlemapformtblcell.xib
@@ -10,17 +10,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Googlemapformtblcell" rowHeight="93" id="KGk-i7-Jjw" customClass="Googlemapformtblcell" customModule="Facetek" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="416" height="93"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Googlemapformtblcell" rowHeight="573" id="KGk-i7-Jjw" customClass="Googlemapformtblcell" customModule="Facetek" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="416" height="573"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="Googlemapformtblcell" customModule="Facetek" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="416" height="93"/>
+                <rect key="frame" x="0.0" y="0.0" width="416" height="573"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lz5-lB-O8I">
-                        <rect key="frame" x="5" y="6" width="407" height="80"/>
+                        <rect key="frame" x="5" y="6" width="407" height="560"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oan-K6-qfE">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Client/Place name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oan-K6-qfE">
                                 <rect key="frame" x="14" y="16" width="375" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -50,7 +50,7 @@
                 <outlet property="titleDataLbl" destination="gs0-fW-fw0" id="Cws-3c-2V1"/>
                 <outlet property="titleLbl" destination="oan-K6-qfE" id="9uT-sa-tzG"/>
             </connections>
-            <point key="canvasLocation" x="179.71014492753625" y="106.13839285714285"/>
+            <point key="canvasLocation" x="179.71014492753625" y="286.94196428571428"/>
         </tableViewCell>
     </objects>
 </document>
