--- a/FaceTek/FaceRegistration/Calendarcell.xib
+++ b/FaceTek/FaceRegistration/Calendarcell.xib
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="Calendarcell" customModule="FaceTek" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="Calendarcell" customModule="Facetek" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="410" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="410" height="74.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="410" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JFo-jY-FxZ">
@@ -43,7 +41,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="InA-bJ-Uj9">
-                                <rect key="frame" x="87" y="6" width="300" height="21"/>
+                                <rect key="frame" x="97" y="6" width="300" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="GHA-bD-pZG"/>
@@ -54,7 +52,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRH-KZ-2OG">
-                                <rect key="frame" x="87" y="30" width="300" height="21"/>
+                                <rect key="frame" x="97" y="30" width="300" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="4wL-91-sVm"/>
@@ -69,7 +67,7 @@
                         <constraints>
                             <constraint firstItem="3uM-ll-M03" firstAttribute="top" secondItem="JFo-jY-FxZ" secondAttribute="top" constant="4" id="Buw-ZK-BfO"/>
                             <constraint firstItem="DRH-KZ-2OG" firstAttribute="width" secondItem="InA-bJ-Uj9" secondAttribute="width" id="MzL-EP-vib"/>
-                            <constraint firstAttribute="trailing" secondItem="InA-bJ-Uj9" secondAttribute="trailing" constant="23" id="Q2w-W9-bVS"/>
+                            <constraint firstAttribute="trailing" secondItem="InA-bJ-Uj9" secondAttribute="trailing" constant="13" id="Q2w-W9-bVS"/>
                             <constraint firstAttribute="bottom" secondItem="K4Q-rr-vfO" secondAttribute="bottom" constant="20" id="TnG-Jh-fuL"/>
                             <constraint firstItem="DRH-KZ-2OG" firstAttribute="leading" secondItem="InA-bJ-Uj9" secondAttribute="leading" id="VBp-iA-iQX"/>
                             <constraint firstItem="DRH-KZ-2OG" firstAttribute="height" secondItem="InA-bJ-Uj9" secondAttribute="height" id="bXI-8R-ghs"/>
@@ -79,7 +77,7 @@
                             <constraint firstItem="K4Q-rr-vfO" firstAttribute="top" secondItem="JFo-jY-FxZ" secondAttribute="top" constant="14" id="se0-Qn-ph0"/>
                             <constraint firstItem="K4Q-rr-vfO" firstAttribute="leading" secondItem="JFo-jY-FxZ" secondAttribute="leading" constant="8" id="skZ-Zp-RYs"/>
                             <constraint firstAttribute="bottom" secondItem="3uM-ll-M03" secondAttribute="bottom" constant="10" id="xso-YV-MFK"/>
-                            <constraint firstItem="InA-bJ-Uj9" firstAttribute="leading" secondItem="3uM-ll-M03" secondAttribute="trailing" constant="8" id="xvo-lX-DhL"/>
+                            <constraint firstItem="InA-bJ-Uj9" firstAttribute="leading" secondItem="3uM-ll-M03" secondAttribute="trailing" constant="18" id="xvo-lX-DhL"/>
                         </constraints>
                     </view>
                 </subviews>
