--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6051,13 +6051,13 @@
                                 <rect key="frame" x="0.0" y="117" width="375" height="280"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_leves_found.png" translatesAutoresizingMaskIntoConstraints="NO" id="LdR-vA-ysz">
-                                        <rect key="frame" x="13" y="13" width="350" height="200"/>
+                                        <rect key="frame" x="38" y="13" width="300" height="175"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="200" id="SO2-Ie-19j"/>
+                                            <constraint firstAttribute="height" constant="175" id="SO2-Ie-19j"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data Found" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJL-xS-GoT">
-                                        <rect key="frame" x="0.0" y="232" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="210" width="375" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="QAy-2z-9FK"/>
                                         </constraints>
@@ -6070,11 +6070,11 @@
                                 <constraints>
                                     <constraint firstItem="LdR-vA-ysz" firstAttribute="top" secondItem="LBp-qg-N3h" secondAttribute="top" constant="13" id="14V-2j-M1y"/>
                                     <constraint firstAttribute="height" constant="280" id="RbO-5E-Bnm"/>
-                                    <constraint firstAttribute="trailing" secondItem="LdR-vA-ysz" secondAttribute="trailing" constant="12" id="W9V-8Z-nt9"/>
+                                    <constraint firstAttribute="trailing" secondItem="LdR-vA-ysz" secondAttribute="trailing" constant="37" id="W9V-8Z-nt9"/>
                                     <constraint firstItem="bJL-xS-GoT" firstAttribute="leading" secondItem="LBp-qg-N3h" secondAttribute="leading" id="Wjh-0m-1db"/>
                                     <constraint firstAttribute="trailing" secondItem="bJL-xS-GoT" secondAttribute="trailing" id="fiV-yU-sp8"/>
-                                    <constraint firstItem="LdR-vA-ysz" firstAttribute="leading" secondItem="LBp-qg-N3h" secondAttribute="leading" constant="13" id="lQh-nt-Zh6"/>
-                                    <constraint firstItem="bJL-xS-GoT" firstAttribute="top" secondItem="LdR-vA-ysz" secondAttribute="bottom" constant="19" id="pvJ-jP-tUx"/>
+                                    <constraint firstItem="LdR-vA-ysz" firstAttribute="leading" secondItem="LBp-qg-N3h" secondAttribute="leading" constant="38" id="lQh-nt-Zh6"/>
+                                    <constraint firstItem="bJL-xS-GoT" firstAttribute="top" secondItem="LdR-vA-ysz" secondAttribute="bottom" constant="22" id="pvJ-jP-tUx"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2ZK-Vm-4mL">
@@ -6101,6 +6101,10 @@
                         <viewLayoutGuide key="safeArea" id="U7C-Z9-oSi"/>
                     </view>
                     <size key="freeformSize" width="375" height="667"/>
+                    <connections>
+                        <outlet property="LeaveHistorytbl" destination="2ZK-Vm-4mL" id="12K-i9-6i7"/>
+                        <outlet property="Nodatafoundview" destination="LBp-qg-N3h" id="VGv-1D-2ZZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5rP-73-hBN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
