Working On LeaveHistory API Integration
Working On LeaveHistory API Integration

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6080,6 +6080,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2ZK-Vm-4mL">
                                 <rect key="frame" x="12" y="120" width="350" height="547"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="unN-jl-LuC" id="ovC-fZ-tVB"/>
+                                    <outlet property="delegate" destination="unN-jl-LuC" id="hQi-lF-0gL"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
